# eICU-mortality-prediction

./: .gitignore  NeuralNetwork.py  README.md  data_processing.py  deep_learning.py  eICU_data_cleaning.ipynb  eICU_data_joining.ipynb  eICU_data_joining.py  embedding-bag-test.ipynb  embedding.py  machine_learning.py  padding.py  pyproject.toml  requirements.txt  search_explore.py  utils.py
notebooks/: eICU-data-exploration.ipynb  eICU-data-joining.ipynb  eICU-data-joining.py  eICU-data-preprocessing.py  eICU-dictionaries.ipynb  eICU-dictionaries.py  eICU-model-interpretation.ipynb  eICU-model-interpretation.py  eICU-model-training.ipynb  eICU-model-training.py  eICU_data_cleaning.py  eICU_data_exploration.py  eICU_data_joining.py  reduce-dataset-size.ipynb  reduce-dataset-size.py
notebooks/.ipynb_checkpoints/: eICU-data-preprocessing-checkpoint.ipynb
notebooks/preprocessing/: diagnosis-data-preprocessing.ipynb  diagnosis-data-preprocessing.py  exams-data-preprocessing.ipynb  exams-data-preprocessing.py  nursing-data-preprocessing.ipynb  nursing-data-preprocessing.py  patient-data-preprocessing.ipynb  patient-data-preprocessing.py  respiratory-data-preprocessing.ipynb  respiratory-data-preprocessing.py  treatment-data-preprocessing.ipynb  treatment-data-preprocessing.py  vital-data-preprocessing.ipynb  vital-data-preprocessing.py
notebooks/sandbox/: RNN_hyperparameter_optimization_config.yaml  TLSTM_hyperparameter_optimization_config.yaml  Untitled.ipynb  category-to-feature-example.ipynb  category-to-feature-example.py  data-utils-tests.ipynb  embedding-bag-test.ipynb  handling-multiple-encodings-and-joins.ipynb  imputation-tests.ipynb  imputation-tests.py  joining-rows-very-large-lists.ipynb  large-dataset-testing.ipynb  large-dataset-testing.py  models-dummy-tests.ipynb  models-dummy-tests.py  moving-files-bucket.ipynb  moving-files-bucket.py  outlier-detection-experiments.ipynb  replace-text-in-file.ipynb  separating-a-column-into-two.ipynb
sandbox/: category_to_feature_example.ipynb  category_to_feature_example.py  encoding-and-joining-rows.ipynb  handling-multiple-encodings-and-joins.ipynb  separating-a-column-into-two.ipynb  zip_file.ipynb
scripts/: Models.py  Time_Series_Dataset.py  aws-ray-cluster.yml  azure-example-cluster.yml  azure-ray-cluster.yml  dead_or_alive.yml  distributed_training.py  eICU_cat_feat_ohe.yml  eICU_const_columns.yml  eICU_dtype_dict.yml  eICU_tvt_sets.yml  eICU_tvt_sets_indices.yml  example-cluster-2.yml  example-cluster.yaml  gcp-config.json  gcp-ray-cluster.yml  pytorch.py  ray-cluster.yml  requirements.txt  utils.py  vanilla-rnn-training.yml
