[tool.poetry]
name = "eicu-mortality-prediction"
version = "0.1.0"
description = "Mortality prediction through recurrent neural networks on the eICU dataset"
authors = ["André Ferreira <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "1.0.1"
dask = "^2.10.1"
torch = "^1.4.0"
plotly = "^4.5.4"
tqdm = "^4.43.0"
scikit-learn = "^0.22.1"
datetime = "^4.3"
shap = {git = "https://github.com/AndreCNF/shap.git"}
toolz = "^0.10.0"
fsspec = "^0.6.2"
cloudpickle = "^1.2"
graphviz = "^0.11.1"
distributed = "^2.2"
fastparquet = "^0.3.2"
pyyaml = "^5.1"
modin = "^0.7.2"
ray = "^0.8.0"
numpy = "^1.18.1"
xgboost = "^0.90"
joblib = "^0.14.1"
jupytext = "^1.4.1"
jupyter-lsp = "^0.7.0-beta.0"
pixiedust = "^1.1.18"
matplotlib = "^3.1.3"
everett = "^1.0.2"
pillow = "^7.0.0"
ipywidgets = "^7.5.1"
model-interpreter = {git = "https://github.com/AndreCNF/model-interpreter.git"}
data-utils = {git = "https://github.com/AndreCNF/data-utils.git"}
pyarrow = "^0.16.0"
dash = "^1.9.1"
ipykernel = "^5.2.0"
tornado = "5.1.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
