[tool.poetry]
name = "eicu-mortality-prediction"
version = "0.1.0"
description = "Mortality prediction through recurrent neural networks on the eICU dataset"
authors = ["André Ferreira <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "1.0.1"
dask = "^2.10.1"
torch = "^1.4.0"
plotly = "^4.8.0"
tqdm = "^4.43.0"
scikit-learn = "^0.22.1"
datetime = "^4.3"
shap = {git = "https://github.com/AndreCNF/shap.git"}
toolz = "^0.10.0"
fsspec = "^0.6.2"
cloudpickle = "^1.2"
graphviz = "^0.11.1"
distributed = "^2.2"
fastparquet = "^0.3.2"
pyyaml = "^5.1"
modin = "^0.7.2"
# ray = {url = "https://ray-wheels.s3-us-west-2.amazonaws.com/master/ddb9368f2c57bf18536f72bcd636ed876fe2c0db/ray-0.9.0.dev0-cp37-cp37m-macosx_10_13_intel.whl"}
numpy = "^1.18.1"
xgboost = "^0.90"
joblib = "^0.14.1"
jupytext = "^1.4.1"
jupyter-lsp = "^0.7.0-beta.0"
pixiedust = "^1.1.18"
matplotlib = "^3.1.3"
everett = "^1.0.2"
pillow = "^7.0.0"
ipywidgets = "^7.5.1"
model-interpreter = {git = "https://github.com/AndreCNF/model-interpreter.git"}
data-utils = {git = "https://github.com/AndreCNF/data-utils.git"}
pyarrow = "^0.16.0"
dash = "^1.12.0"
ipykernel = "^5.2.0"
tornado = "5.1.1"
tabulate = "^0.8.7"
cryptography = "^2.9"
google-api-python-client = "^1.8.0"
oauth2client = "^4.1.3"
google-cloud = "^0.34.0"
azure-cli = "^2.5.1"
azure-core = "^1.5.0"
comet_ml = "^3.1.7"
google-cloud-storage = "^1.28.1"
notebook = "^6.0.3"
dash_bootstrap_components = "^0.10.0"
knack = "^0.7.1"
azure-cli-core = "^2.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
